rbac-best-practices/restrict-wildcard-resources/remediate-restrict-wildcard-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-restrict-wildcard-resources
  annotations:
    policies.kyverno.io/title: Remediate Restrict Wildcard in Resources
    policies.kyverno.io/category: RBAC Best Practices
    policies.kyverno.io/description: >-
      This policy remediates the restrict-wildcard-resources violation
spec:
  background: false
  rules:
    - name: remediate-restrict-wildcard-resources
      match:
        any:
        - resources:
            kinds:
              - Role
              - ClusterRole
      mutate:
        foreach: 
          - list: request.object.rules[]
            foreach:
            - list: element.resources
              preconditions:
                all:
                - key: "*"
                  operator: Equals
                  value: "{{element}}"
              patchesJson6902: |-
                - path: /rules/{{elementIndex0}}/resources/{{elementIndex1}}
                  op: replace
                  value: ""
