rbac-best-practices/restrict-wildcard-resources/e2e/remediation-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-restrict-wildcard-resources
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
